--- a/index.html
+++ b/index.html
@@ -7,31 +7,33 @@
 		/>
 	</head>
 	<body>
-		<h1>My Emojis</h1>
-		<div id="emoji-wrapper">
-			<h3>Likes</h3>
-			<div id="emoji-container-1" class="emoji-container"></div>
-		</div>
+		<main id="main-wrapper">
+			<div>
+				<h1>My Emojis</h1>
 
-		<input type="text" id="emoji-input" placeholder="type an emoji 🎉" />
-		<button id="emoji-btn">😎</button>
-		<!-- <input type="text" /> -->
+				<div id="emoji-container">
+					<button id="emoji-btn">😎</button>
+					<input
+						type="text"
+						id="emoji-input"
+						placeholder="type an emoji 🎉 to get started"
+					/>
+				</div>
 
-		<div class="buttons-wrapper">
-			<button id="load-btn">Load Saved</button>
-			<button id="push-btn">Add</button>
-			<!-- <button id="unshift-btn">Add to beginning</button> -->
-		</div>
+				<div class="buttons-wrapper">
+					<div class="btn-container">
+						<button id="save-btn" class="btn">Save</button>
+						<button id="load-btn" class="btn">Load</button>
+						<button id="clear-btn" class="btn">Clear</button>
+					</div>
+				</div>
 
-		<div class="buttons-wrapper">
-			<button id="pop-btn">Remove</button>
-			<!-- <button id="shift-btn">Remove from beginning</button> -->
-			<button id="clear-btn">Clear all</button>
-		</div>
-
-		<div class="message-wrapper">
-			<p id="error-msg"></p>
-		</div>
+				<hr />
+				<div class="message-wrapper">
+					<p id="msg"></p>
+				</div>
+			</div>
+		</main>
 
 		<script src="https://cdn.jsdelivr.net/npm/@joeattardi/emoji-button@3.0.3/dist/index.min.js"></script>
 		<script src="app.js"></script>
